<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ruteando</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_agregar">Agregar</string>
    <string name="ok">Aceptar</string>
    <string name="ocio">Ocio</string>
    <string name="cultura">Cultura</string>
    <string name="comida">Comida</string>
    <string name="compras">Compras</string>
    <string name="title_activity_ocio">ocioActivity</string>
    <string name="title_activity_compras_">Compras_Activity</string>
    <string name="title_activity_cultura">Cultura</string>
    <string name="title_activity_comida">Comida</string>
    <string name="title_activity_maps">Map</string>

</resources>
