<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="#fff"
        android:orientation="horizontal">


        <LinearLayout android:id="@+id/layout_ocio"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:background="#ff31ff83"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocio"
                android:textColor="@color/white"
                android:textSize="@dimen/tamanio_categorias" />
        </LinearLayout>

        <LinearLayout android:id="@+id/layout_cultura"

            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:background="#ff3853ff"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cultura"
                android:textColor="@color/white"
                android:textSize="@dimen/tamanio_categorias" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="#000"
        android:orientation="horizontal">

    <LinearLayout android:id="@+id/layout_comida"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:background="#ffffed59"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comida"
                android:textColor="@color/white"
                android:textSize="@dimen/tamanio_categorias" />
        </LinearLayout>

    <LinearLayout android:id="@+id/layout_compras"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:background="#ff8100ff"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compras"
                android:textColor="@color/white"
                android:textSize="@dimen/tamanio_categorias" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="#fff0fffc"
        android:gravity="center">

        <Button android:id="@+id/btn_aceptar"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/ok"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
